logs/rtt.20260327-182127.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent3)
error[E0284]: type annotations needed
  --> tests/Chap57/TestDijkstraStEphF64.rs:30:17
   |
30 |     let graph = WeightedDirGraphStEphF64Trait::from_weighed_edges(vertices, edges);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `<_ as vstd::view::View>::V == LabGraphView<usize, f64>`
note: required by a bound in `apas_verus::Chap06::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64Trait::from_weighed_edges`
  --> src/Chap06/WeightedDirGraphStEphF64.rs:36:14
   |
36 |         View<V = LabGraphView<<V as View>::V, f64>> + Sized {
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WeightedDirGraphStEphF64Trait::from_weighed_edges`
...
40 |         fn from_weighed_edges(vertices: SetStEph<V>, edges: SetStEph<WeightedEdge<V, WrappedF64>>) -> (g: WeightedDirGraphStEphF64<V>)
   |            ------------------ required by a bound in this associated function

error[E0284]: type annotations needed
  --> tests/Chap57/TestDijkstraStEphF64.rs:55:17
   |
55 |     let graph = WeightedDirGraphStEphF64Trait::from_weighed_edges(vertices, edges);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `<_ as vstd::view::View>::V == LabGraphView<usize, f64>`
note: required by a bound in `apas_verus::Chap06::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64Trait::from_weighed_edges`
  --> src/Chap06/WeightedDirGraphStEphF64.rs:36:14
   |
36 |         View<V = LabGraphView<<V as View>::V, f64>> + Sized {
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WeightedDirGraphStEphF64Trait::from_weighed_edges`
...
40 |         fn from_weighed_edges(vertices: SetStEph<V>, edges: SetStEph<WeightedEdge<V, WrappedF64>>) -> (g: WeightedDirGraphStEphF64<V>)
   |            ------------------ required by a bound in this associated function

error[E0284]: type annotations needed
  --> tests/Chap57/TestDijkstraStEphF64.rs:72:17
   |
72 |     let graph = WeightedDirGraphStEphF64Trait::from_weighed_edges(vertices, edges);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `<_ as vstd::view::View>::V == LabGraphView<usize, f64>`
note: required by a bound in `apas_verus::Chap06::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64Trait::from_weighed_edges`
  --> src/Chap06/WeightedDirGraphStEphF64.rs:36:14
   |
36 |         View<V = LabGraphView<<V as View>::V, f64>> + Sized {
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WeightedDirGraphStEphF64Trait::from_weighed_edges`
...
40 |         fn from_weighed_edges(vertices: SetStEph<V>, edges: SetStEph<WeightedEdge<V, WrappedF64>>) -> (g: WeightedDirGraphStEphF64<V>)
   |            ------------------ required by a bound in this associated function

error[E0284]: type annotations needed
  --> tests/Chap57/TestDijkstraStEphF64.rs:88:17
   |
88 |     let graph = WeightedDirGraphStEphF64Trait::from_weighed_edges(vertices, edges);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `<_ as vstd::view::View>::V == LabGraphView<usize, f64>`
note: required by a bound in `apas_verus::Chap06::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64Trait::from_weighed_edges`
  --> src/Chap06/WeightedDirGraphStEphF64.rs:36:14
   |
36 |         View<V = LabGraphView<<V as View>::V, f64>> + Sized {
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WeightedDirGraphStEphF64Trait::from_weighed_edges`
...
40 |         fn from_weighed_edges(vertices: SetStEph<V>, edges: SetStEph<WeightedEdge<V, WrappedF64>>) -> (g: WeightedDirGraphStEphF64<V>)
   |            ------------------ required by a bound in this associated function

error[E0284]: type annotations needed
   --> tests/Chap57/TestDijkstraStEphF64.rs:108:17
    |
108 |     let graph = WeightedDirGraphStEphF64Trait::from_weighed_edges(vertices, edges);
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
    |
    = note: cannot satisfy `<_ as vstd::view::View>::V == LabGraphView<usize, f64>`
note: required by a bound in `apas_verus::Chap06::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64Trait::from_weighed_edges`
   --> src/Chap06/WeightedDirGraphStEphF64.rs:36:14
    |
 36 |         View<V = LabGraphView<<V as View>::V, f64>> + Sized {
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WeightedDirGraphStEphF64Trait::from_weighed_edges`
...
 40 |         fn from_weighed_edges(vertices: SetStEph<V>, edges: SetStEph<WeightedEdge<V, WrappedF64>>) -> (g: WeightedDirGraphStEphF64<V>)
    |            ------------------ required by a bound in this associated function

error[E0284]: type annotations needed
   --> tests/Chap57/TestDijkstraStEphF64.rs:132:17
    |
132 |     let graph = WeightedDirGraphStEphF64Trait::from_weighed_edges(vertices, edges);
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
    |
    = note: cannot satisfy `<_ as vstd::view::View>::V == LabGraphView<usize, f64>`
note: required by a bound in `apas_verus::Chap06::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64Trait::from_weighed_edges`
   --> src/Chap06/WeightedDirGraphStEphF64.rs:36:14
    |
 36 |         View<V = LabGraphView<<V as View>::V, f64>> + Sized {
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WeightedDirGraphStEphF64Trait::from_weighed_edges`
...
 40 |         fn from_weighed_edges(vertices: SetStEph<V>, edges: SetStEph<WeightedEdge<V, WrappedF64>>) -> (g: WeightedDirGraphStEphF64<V>)
    |            ------------------ required by a bound in this associated function

error[E0284]: type annotations needed
   --> tests/Chap57/TestDijkstraStEphF64.rs:153:17
    |
153 |     let graph = WeightedDirGraphStEphF64Trait::from_weighed_edges(vertices, edges);
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
    |
    = note: cannot satisfy `<_ as vstd::view::View>::V == LabGraphView<usize, f64>`
note: required by a bound in `apas_verus::Chap06::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64::WeightedDirGraphStEphF64Trait::from_weighed_edges`
   --> src/Chap06/WeightedDirGraphStEphF64.rs:36:14
    |
 36 |         View<V = LabGraphView<<V as View>::V, f64>> + Sized {
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WeightedDirGraphStEphF64Trait::from_weighed_edges`
...
 40 |         fn from_weighed_edges(vertices: SetStEph<V>, edges: SetStEph<WeightedEdge<V, WrappedF64>>) -> (g: WeightedDirGraphStEphF64<V>)
    |            ------------------ required by a bound in this associated function

For more information about this error, try `rustc --explain E0284`.
error: could not compile `apas-verus` (test "TestDijkstraStEphF64") due to 7 previous errors
warning: build failed, waiting for other jobs to finish...
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 12s
